--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-# wx_test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>123</title>
+    <link rel="stylesheet" href="mycss.css">
+</head>
+
+<body>
+    <h1>hello</h1>
+</body>
+</html>
